service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
    version: blue   # ← controla tráfico
  ports:
    - port: 80
      targetPort: 80
