web-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-green-service
spec:
  selector:
    version: green
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
