ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # 🔥 CANARY WEIGHTS
    alb.ingress.kubernetes.io/actions.weighted-routing: >
      {
        "type":"forward",
        "forwardConfig":{
          "targetGroups":[
            {
              "serviceName":"web-service",
              "servicePort":"80",
              "weight":10
            },
            {
              "serviceName":"web-green-service",
              "servicePort":"80",
              "weight":90
            }
          ]
        }
      }

spec:
  ingressClassName: alb
  rules:
  - host: app.sebastiancloudops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weighted-routing
            port:
              name: use-annotation
