ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:252556588994:certificate/47e621a3-840f-4143-b267-8cc73be5a0c6
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    # 🔥 CANARY WEIGHTS
    alb.ingress.kubernetes.io/actions.weighted-routing: >
      {
        "type":"forward",
        "forwardConfig":{
          "targetGroups":[
            {
              "serviceName":"web-service",
              "servicePort":"80",
              "weight":10
            },
            {
              "serviceName":"web-green-service",
              "servicePort":"80",
              "weight":90
            }
          ]
        }
      }

spec:
  ingressClassName: alb
  rules:
  - host: app.sebastiancloudops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weighted-routing
            port:
              name: use-annotation
